--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>So Cool</title>
-    <link rel="stylesheet" href="main.css"  />
-  </head>
-  <body>
-    <div class="thumb1">
-      <h1>What's up?</h1>
-    </div>
-    <section id="section">
-      <h2>Can you read this?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-    <br />
-    <section id="section">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </section>
-    <div class="thumb2"></div>
-    <br />
-    <br />
-      <button class="btn-1">Touch To SASS</button>
-      <br />
-      <button class="btn-2">SASSY</button>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Them Skillzz</title>
+  <link rel="stylesheet" href="./CSS/main.css" media="screen" charset="utf-8">
+</head>
+
+<body>
+  <div id="header">
+    <h1>I HAVE THE SKILLZ</h1>
+  </div>
+  <div id="main-nav">
+    <ul>
+      <li><a href="">HOME</a></li>
+      <li><a href="">SKATE SHOP</a></li>
+      <li><a href="">ABOUT</a></li>
+    </ul>
+  </div>
+  <div id="main-content">
+    <h3>Using Mixins</h2>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+      <div class="pro-img"></div>
+  </div>
+  <div id="main-content">
+    <h2>Using Extends</h2>
+    <div class="alert">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    <div class="success">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    <div class="warning">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+    <div class="oh-dang">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+  </div>
+</body>
+
 </html>
